# session-test-between-spa-backend

app/: go.mod  go.sum  main.go
app/db/: db.go
app/views/: index.html  login-ok.html  login.html
frontend/: package.json
frontend/src/: App.tsx  Routes.tsx
frontend/src/atoms/: auth.ts
server/: main.go
server-rs/: .gitignore  Cargo.toml
server-rs/src/: db.rs  main.rs  models.rs  routes.rs
server/views/: header.html  mypage.html
