[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "sqlite", "migrate"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
